# claude-orchestra

./: .gitignore  plan-v10.1.md  plan-v10.md  plan-v12.md  plan-v16.md  session-v16-approved.md
20260120_session-sync/: README.md  sync-sessions.ps1
claude-orchestra/: README.md  plan-v13.md  plan-v14.md  plan-v15.md  plan-v17.md  plan-v18-config.md  plan-v18-hooks.md  plan-v18-lib.md  pyproject.toml  session-v17-final.md  temp_append.txt
claude-orchestra/lib/: __init__.py  bootstrap.py  budget.py  cli_finder.py  codex_wrapper.py  context_guard.py  env_check.py  gemini_wrapper.py  output_schemas.py  path_utils.py  resilience.py  vault_sync.py
claude-orchestra/reviews/: phase1-codex-review-20260207.md
claude-orchestra/tests/: conftest.py  test_bootstrap.py  test_budget.py  test_cli_finder.py  test_codex_wrapper.py  test_context_guard.py  test_e2e_budget_multi.py  test_e2e_context_guard_flow.py  test_e2e_hook_lifecycle.py  test_e2e_lifecycle_flow.py  test_e2e_skill_integration.py  test_e2e_vault_session.py  test_env_check.py  test_gemini_wrapper.py  test_hooks.py  test_import_chain.py  test_output_schemas.py  test_path_utils.py  test_resilience.py  test_vault_sync.py
notes/: metrics.md  rules-local.md
scripts/: claude_session_parser.py
