[project]
name = "claude-orchestra"
version = "1.0.0"
description = "Multi-agent orchestration library for Claude Code"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v"
markers = [
    "e2e: End-to-end tests that access real ~/.claude/ files (require ORCHESTRA_E2E=1)",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
